--- a/flex.html
+++ b/flex.html
@@ -91,44 +91,44 @@
     -->
     <!-- <div class="bg-light-subtle mb-2 container">
         <div class="d-flex justify-content-start bg-info">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">Start</div>
+            <div class="p-2 bg-info-subtle border border-black">Justify</div>
+            <div class="p-2 bg-info-subtle border border-black">Content</div>
+            <div class="p-2 bg-info-subtle border border-black">Start</div>
         </div>
     </div>
     <div class="bg-light-subtle mb-2 container">
         <div class="d-flex justify-content-end bg-info">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">End</div>
+            <div class="p-2 bg-info-subtle border border-black">Justify</div>
+            <div class="p-2 bg-info-subtle border border-black">Content</div>
+            <div class="p-2 bg-info-subtle border border-black">End</div>
         </div>
     </div>
     <div class="bg-light-subtle mb-2 container">
         <div class="d-flex justify-content-center bg-info">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">Center</div>
+            <div class="p-2 bg-info-subtle border border-black">Justify</div>
+            <div class="p-2 bg-info-subtle border border-black">Content</div>
+            <div class="p-2 bg-info-subtle border border-black">Center</div>
         </div>
     </div>
     <div class="bg-light-subtle mb-2 container">
         <div class="d-flex justify-content-between bg-info">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">Between</div>
+            <div class="p-2 bg-info-subtle border border-black">Justify</div>
+            <div class="p-2 bg-info-subtle border border-black">Content</div>
+            <div class="p-2 bg-info-subtle border border-black">Between</div>
         </div>
     </div>
     <div class="bg-light-subtle mb-2 container">
         <div class="d-flex justify-content-around bg-info">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">Around</div>
+            <div class="p-2 bg-info-subtle border border-black">Justify</div>
+            <div class="p-2 bg-info-subtle border border-black">Content</div>
+            <div class="p-2 bg-info-subtle border border-black">Around</div>
         </div>
     </div>
     <div class="bg-light-subtle mb-2 container">
         <div class="d-flex justify-content-evenly bg-info">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">Evenly</div>
+            <div class="p-2 bg-info-subtle border border-black">Justify</div>
+            <div class="p-2 bg-info-subtle border border-black">Content</div>
+            <div class="p-2 bg-info-subtle border border-black">Evenly</div>
         </div>
     </div> -->
 
@@ -142,124 +142,163 @@
          * align-items-baseline
          * align-items-stretch
         -->
-    <div class="container">
-        <div class="bg-info m-2 align-items-start d-flex" style="height: 75px;">
-            <div class="p-1 m-1 bg-dark-subtle">Flex</div>
-            <div class="p-1 m-1 bg-dark-subtle">Items</div>
-            <div class="p-1 m-1 bg-dark-subtle">Start</div>
+    <!-- <div class="container">
+        <div class="bg-info m-2 align-items-start d-flex" style="height: 115px;">
+            <div class="p-2 bg-info-subtle border border-black">Align</div>
+            <div class="p-2 bg-info-subtle border border-black">Items</div>
+            <div class="p-2 bg-info-subtle border border-black">Start</div>
         </div>
 
-    <div class="bg-info m-2 d-flex align-items-end" style="height: 75px;">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">End</div>
+       <div class="bg-info m-2 d-flex align-items-end" style="height: 115px;">
+            <div class="p-2 bg-info-subtle border border-black">Align</div>
+            <div class="p-2 bg-info-subtle border border-black">Items</div>
+            <div class="p-2 bg-info-subtle border border-black">End</div>
         </div>
 
-    <div class="bg-info m-2 d-flex align-items-center" style="height: 75px;">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">Center</div>
+       <div class="bg-info m-2 d-flex align-items-center" style="height: 115px;">
+            <div class="p-2 bg-info-subtle border border-black">Align</div>
+            <div class="p-2 bg-info-subtle border border-black">Items</div>
+            <div class="p-2 bg-info-subtle border border-black">Center</div>
         </div>
 
-    <div class="bg-info m-2 d-flex align-items-baseline" style="height: 75px;">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">Between</div>
+       <div class="bg-info m-2 d-flex align-items-baseline" style="height: 115px;">
+            <div class="p-2 bg-info-subtle border border-black">Align</div>
+            <div class="p-2 bg-info-subtle border border-black">Items</div>
+            <div class="p-2 bg-info-subtle border border-black">Baseline</div>
         </div>
 
-    <div class="bg-info m-2 d-flex align-items-stretch" style="height: 75px;">
-            <div class="p-1 m-1 bg-dark-subtle">Justify</div>
-            <div class="p-1 m-1 bg-dark-subtle">Content</div>
-            <div class="p-1 m-1 bg-dark-subtle">Around</div>
+       <div class="bg-info m-2 d-flex align-items-stretch" style="height: 115px;">
+            <div class="p-2 bg-info-subtle border border-black">Align</div>
+            <div class="p-2 bg-info-subtle border border-black">Items</div>
+            <div class="p-2 bg-info-subtle border border-black">Stretch</div>
         </div>
-    </div>
+    </div> -->
 
-    <!-- ALIGN SELF
-         Use align-self utilities on flexbox items to individually change their alignment on the cross axis (the y-axis to start, x-axis if flex-direction: column). Choose from the same options as align-items: start, end, center, baseline, or stretch (browser default).
+    <!-- (## ALIGN SELF ##)
+        (Use align-self utilities on flexbox items to individually change their alignment on the cross axis
+        (the y-axis to start, x-axis if flex-direction: column).
+        Choose from the same options as align-items: start, end, center, baseline, or stretch (browser default).)
          * align-self-start
          * align-self-end
          * align-self-center
          * align-self-baseline
          * align-self-stretch
         -->
-    <!-- <div class="container bg-danger-subtle d-flex mb-2" style="height: 75px;">
+    <!-- <div class="container bg-danger-subtle d-flex mt-2" style="height: 75px;">
         <div class="border bg-primary">Flex item</div>
         <div class="align-self-start border bg-secondary">Aligned flex item</div>
         <div class="border bg-info">Flex item</div>
     </div>
-    <div class="container bg-danger-subtle d-flex mb-2" style="height: 75px;">
+    <div class="container bg-danger-subtle d-flex mt-2" style="height: 75px;">
         <div class="border bg-primary">Flex item</div>
         <div class="align-self-end border bg-secondary">Aligned flex item</div>
         <div class="border bg-info">Flex item</div>
     </div>
-    <div class="container bg-danger-subtle d-flex mb-2" style="height: 75px;">
+    <div class="container bg-danger-subtle d-flex mt-2" style="height: 75px;">
         <div class="border bg-primary">Flex item</div>
         <div class="align-self-center border bg-secondary">Aligned flex item</div>
         <div class="border bg-info">Flex item</div>
     </div>
-    <div class="container bg-danger-subtle d-flex mb-2" style="height: 75px;">
+    <div class="container bg-danger-subtle d-flex mt-2" style="height: 75px;">
         <div class="border bg-primary">Flex item</div>
         <div class="align-self-baseline border bg-secondary">Aligned flex item</div>
         <div class="border bg-info">Flex item</div>
     </div>
-    <div class="container bg-danger-subtle d-flex mb-2" style="height: 75px;">
+    <div class="container bg-danger-subtle d-flex mt-2" style="height: 75px;">
         <div class="border bg-primary">Flex item</div>
         <div class="align-self-stretch border bg-secondary">Aligned flex item</div>
         <div class="border bg-info">Flex item</div>
     </div> -->
 
+    <!-- (## FILL ##)
+        (Use the .flex-fill class on a series of sibling elements to force them into widths equal to their content
+        (or equal widths if their content does not surpass their border-boxes) while taking up all available horizontal space.)
+    -->
+    <!-- <div class="d-flex bg-success-subtle">
+        <div class="p-2 flex-fill border border-black">Flex item with a lot of content</div>
+        <div class="p-2 flex-fill border border-black">Flex item</div>
+        <div class="p-2 flex-fill border border-black">Flex item</div>
+    </div> -->
+
     <!-- GROW & SHRINK -->
-    <!-- flex-grow-* utilities to toggle a flex item’s ability to grow to fill available space. In the example below, the .flex-grow-1 elements uses all available space it can, while allowing the remaining two flex items their necessary space. -->
+    <!-- flex-grow-* utilities to toggle a flex item’s ability to grow to fill available space.
+        In the example below, the .flex-grow-1 elements uses all available space it can,
+        while allowing the remaining two flex items their necessary space. -->
     <!-- <div class="d-flex bg-info-subtle">
         <div class="p-2 flex-grow-1 border border-2 border-black">Flex item</div>
         <div class="p-2 border border-2 border-black">Flex item</div>
         <div class="p-2 border border-2 border-black">Third flex item</div>
     </div> -->
 
-    <!-- flex-shrink-* utilities to toggle a flex item’s ability to shrink if necessary. In the example below, the second flex item with .flex-shrink-1 is forced to wrap its contents to a new line, “shrinking” to allow more space for the previous flex item with .w-100. -->
+    <!-- flex-shrink-* utilities to toggle a flex item’s ability to shrink if necessary. In the example below,
+        the second flex item with .flex-shrink-1 is forced to wrap its contents to a new line, “shrinking”
+        to allow more space for the previous flex item with .w-100. -->
     <!-- <div class="d-flex bg-info-subtle">
         <div class="p-2 w-100 border border-2 border-black">Flex item</div>
         <div class="p-2 flex-shrink-1 border border-2 border-black">Flex item</div>
     </div> -->
 
     <!-- AUTO MARGINS
-    Flexbox can do some pretty awesome things when you mix flex alignments with auto margins. Shown below are three examples of controlling flex items via auto margins: default (no auto margin), pushing two items to the right (.me-auto), and pushing two items to the left (.ms-auto).
+    Flexbox can do some pretty awesome things when you mix flex alignments with auto margins.
+    Shown below are three examples of controlling flex items via auto margins: default (no auto margin),
+    pushing two items to the right (.me-auto), and pushing two items to the left (.ms-auto).
     -->
-    <!-- <div class="d-flex mb-3 bg-success-subtle">
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-      </div>
+    <!-- <div class="container">
+        <div class="d-flex mb-2 bg-danger-subtle">
+            <div class="p-2 border border-black">Flex item</div>
+            <div class="p-2 border border-black">Flex item</div>
+            <div class="p-2 border border-black">Flex item</div>
+        </div>
 
-      <div class="d-flex mb-3 bg-success-subtle">
-        <div class="me-auto p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-      </div>
+        <div class="d-flex mb-2 bg-danger-subtle">
+            <div class="me-auto p-2 border border-black">Flex item</div>
+            <div class="p-2 border border-black">Flex item</div>
+            <div class="p-2 border border-black">Flex item</div>
+        </div>
 
-      <div class="d-flex mb-3 bg-success-subtle">
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="ms-auto p-2 border border-1 border-dark-subtle">Flex item</div>
-      </div> -->
+        <div class="d-flex mb-2 bg-danger-subtle">
+            <div class="p-2 border border-black">Flex item</div>
+            <div class="p-2 border border-black">Flex item</div>
+            <div class="ms-auto p-2 border border-black">Flex item</div>
+        </div>
+    </div> -->
 
     <!-- AUTO MARGINS WITH ALIGN-ITEMS
-    Vertically move one flex item to the top or bottom of a container by mixing align-items, flex-direction: column, and margin-top: auto or margin-bottom: auto.
+    Vertically move one flex item to the top or bottom of a container by mixing align-items,
+    flex-direction: column, and margin-top: auto or margin-bottom: auto.
     -->
-    <!-- <div class="d-flex align-items-start flex-column mb-3 bg-danger-subtle" style="height: 200px;">
-        <div class="mb-auto p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-      </div>
+    <!-- <div class="container">
+        <div class="d-flex align-items-start flex-column mb-3 bg-danger-subtle" style="height: 200px;">
+            <div class="mb-auto p-2 border border-black">Flex item</div>
+            <div class="p-2 border border-black">Flex item</div>
+            <div class="p-2 border border-black">Flex item</div>
+        </div>
 
-      <div class="d-flex align-items-end flex-column mb-3 bg-danger-subtle" style="height: 200px;">
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="p-2 border border-1 border-dark-subtle">Flex item</div>
-        <div class="mt-auto p-2 border border-1 border-dark-subtle">Flex item</div>
-      </div> -->
+        <div class="d-flex align-items-end flex-column mb-3 bg-danger-subtle" style="height: 200px;">
+            <div class="p-2 border border-black">Flex item</div>
+            <div class="p-2 border border-black">Flex item</div>
+            <div class="mt-auto p-2 border border-black">Flex item</div>
+        </div>
+    </div> -->
 
-    <!-- WRAP
-    Change how flex items wrap in a flex container. Choose from no wrapping at all (the browser default) with .flex-nowrap, wrapping with .flex-wrap, or reverse wrapping with .flex-wrap-reverse.
+    <!-- (## WRAP ##)
+        (Change how flex items wrap in a flex container. Choose from no wrapping at all (the browser default)
+        with .flex-nowrap, wrapping with .flex-wrap, or reverse wrapping with .flex-wrap-reverse.)
+    -->
+
+    <!-- (## ORDER ##)
+        Change the visual order of specific flex items with a handful of order utilities. We only provide options for making an item first or last, as well as a reset to use the DOM order. As order takes any integer value from 0 to 5, add custom CSS for any additional values needed.
+    -->
+
+    <!-- (## ALIGN CONTENT ##)
+        Use align-content utilities on flexbox containers to align flex items together on the cross axis. Choose from start (browser default), end, center, between, around, or stretch. To demonstrate these utilities, we’ve enforced flex-wrap: wrap and increased the number of flex items.
+        (Heads up! This property has no effect on single rows of flex items.)
+        * align-content-start
+        * align-content-end
+        * align-content-center
+        * align-content-between
+        * align-content-around
+        * align-content-stretch
     -->
 
     <!-- JS LINK -->
