--- a/float.html
+++ b/float.html
@@ -14,9 +14,11 @@
     * float-end
     * float-none
     -->
-    <div class="float-start">Float start on all viewport sizes</div><br>
-    <div class="float-end">Float end on all viewport sizes</div><br>
-    <div class="float-none">Don't float on all viewport sizes</div>
+    <div class="container border border-black">
+        <div class="float-start">Float start on all viewport sizes</div><br>
+        <div class="float-end">Float end on all viewport sizes</div><br>
+        <div class="float-none">Don't float on all viewport sizes</div>
+    </div>
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
