--- a/interactions.html
+++ b/interactions.html
@@ -9,9 +9,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    <p class="user-select-all">This paragraph will be entirely selected when clicked by the user.</p>
-<p class="user-select-auto">This paragraph has default select behavior.</p>
-<p class="user-select-none">This paragraph will not be selectable when clicked by the user.</p>
+    <!-- (## TEXT SELECTION ##)
+        (Change the way in which the content is selected when the user interacts with it.)
+    -->
+    <!-- <div class="container">
+        <p class="user-select-all">
+            This paragraph will be entirely selected when clicked by the user.
+        </p>
+        <p class="user-select-auto">
+            This paragraph has default select behavior.
+        </p>
+        <p class="user-select-none">
+            This paragraph will not be selectable when clicked by the user.
+        </p>
+    </div> -->
+
+    <!-- (## POINTER EVENTS ##)
+        (Bootstrap provides .pe-none and .pe-auto classes to prevent or add element interactions.
+        The .pe-none class (and the pointer-events CSS property it sets) only prevents interactions with a pointer (mouse, stylus, touch).
+        Links and controls with .pe-none are, by default, still focusable and actionable for keyboard users.
+        To ensure that they are completely neutralized even for keyboard users,
+        you may need to add further attributes such as tabindex="-1" (to prevent them from receiving keyboard focus)
+        and aria-disabled="true" (to convey the fact they are effectively disabled to assistive technologies),
+        and possibly use JavaScript to completely prevent them from being actionable.)
+
+        If possible, the simpler solution is:
+        * For form controls, add the disabled HTML attribute.
+        * For links, remove the href attribute, making it a non-interactive anchor or placeholder link.
+    -->
+    <!-- <div class="container">
+        <p>
+            <a href="#" class="pe-none" tabindex="-1" aria-disabled="true">This link</a> can not be clicked.
+        </p>
+        <p>
+            <a href="#" class="pe-auto">This link</a> can be clicked (this is default behavior).
+        </p>
+        <p class="pe-none">
+            <a href="#" tabindex="-1" aria-disabled="true">This link</a> can not be clicked because the <code>pointer-events</code>
+            property is inherited from its parent. However, <a href="#" class="pe-auto">this link</a> has a <code>pe-auto</code> class and can be clicked.
+        </p>
+    </div> -->
 
 <!-- JS LINK -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
