--- a/opacity.html
+++ b/opacity.html
@@ -9,10 +9,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-        <div class="mb-2 p-5 w-25 h-75 text-center bg-info opacity-100 rounded">100%</div>
-        <div class="mb-2 p-5 w-25 h-75 text-center bg-info opacity-75 rounded">75%</div>
-        <div class="mb-2 p-5 w-25 h-75 text-center bg-info opacity-50 rounded">50%</div>
-        <div class="mb-2 p-5 w-25 h-75 text-center bg-info opacity-25 rounded">25%</div>
+    <!-- (## OPACITY ##)
+        The opacity property sets the opacity level for an element. The opacity level describes the transparency level,
+        where 1 is not transparent at all, .5 is 50% visible, and 0 is completely transparent.
+    -->
+
+    <div class="mb-2 p-5 w-25 h-75 text-center bg-info opacity-100 rounded">
+        100%
+    </div>
+    <div class="mb-2 p-5 w-25 h-75 text-center bg-info opacity-75 rounded">
+        75%
+    </div>
+    <div class="mb-2 p-5 w-25 h-75 text-center bg-info opacity-50 rounded">
+        50%
+    </div>
+    <div class="mb-2 p-5 w-25 h-75 text-center bg-info opacity-25 rounded">
+        25%
+    </div>
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
