--- a/overflow.html
+++ b/overflow.html
@@ -7,24 +7,76 @@
     <title>Overflow-Bootstrap</title>
     <!-- CSS LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <style>
+    <!-- <style>
         div{
             width: 200px;
             height: 200px;
         }
-    </style>
+    </style> -->
 </head>
 <body>
-    <!-- OVERFLOW
-    * auto
-    * hidden
-    * visible
-    * scroll
+    <!-- (## OVERFLOW ##)
+        Adjust the overflow property on the fly with four default values and classes.
+        These classes are not responsive by default.
+        * auto
+        * hidden
+        * visible
+        * scroll
     -->
-    <div class="overflow-auto border border-1 mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor illo, praesentium reprehenderit dignissimos excepturi hic repellendus. Similique nemo quam eos!Lorem Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, aliquid. </div>
-    <div class="overflow-hidden border border-1 mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium placeat nulla minus repellat in doloribus, animi aspernatur sequi voluptatem temporibus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, praesentium? </div>
-    <div class="overflow-visible border border-1 mb-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione tempore, non enim ut autem eaque laborum quas reprehenderit consectetur accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, totam.</div>
-    <div class="overflow-scroll border border-1 mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, voluptatibus. Fugiat facilis quaerat ipsa molestias provident sunt fuga at reprehenderit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, mollitia. </div>
+
+    <!-- <div class="container w-50 mt-3 border border-black">
+        <h2>
+            Scrollable Container Example
+        </h2>
+        <div class="overflow-auto" style="height: 150px;">
+            <img src="https://via.placeholder.com/500x500" alt="Overflowing Image">
+        </div>
+    </div>
+
+    <div class="container w-50 mt-3 border border-black">
+        <h2>
+            Overflow Hidden Example
+        </h2>
+        <div class="overflow-hidden" style="width: 200px;">
+            <img src="https://via.placeholder.com/500x500" alt="Overflowing Image">
+        </div>
+    </div>
+
+    <div class="container w-50 mt-3 border border-black">
+        <h2>
+            Overflow Visible Example
+        </h2>
+        <div class="overflow-visible" style="width: 200px;">
+            <img src="https://via.placeholder.com/500x500" alt="Overflowing Image">
+        </div>
+    </div>
+
+    <div class="container w-50 mt-3 mb-3 border border-black">
+        <h2>
+            Overflow Scroll Example
+        </h2>
+        <div class="overflow-scroll" style="height: 100px;">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in porttitor leo. Nunc sed neque magna. Duis euismod augue ut sapien fermentum aliquet. Sed quis felis vitae elit aliquam malesuada. Maecenas bibendum, nunc vel vestibulum feugiat, metus lectus maximus arcu, in posuere orci dolor et magna. Fusce tristique vel arcu ac mattis. Praesent at arcu vel ipsum tincidunt varius. Praesent rutrum euismod sapien, sed posuere quam pulvinar eu. Nunc imperdiet ac ex id faucibus. In malesuada tortor in massa posuere sagittis. Sed eleifend bibendum arcu vel rhoncus. Aliquam erat volutpat. Mauris ac eleifend nisi.
+            </p>
+        </div>
+    </div> -->
+
+    <!-- (## OVERFLOW-X ##)
+        Adjust the overflow-x property to affect the overflow of content horizontally.
+        * overflow-x-auto
+        * overflow-x-hidden
+        * overflow-x-visible
+        * overflow-x-scroll
+    -->
+
+    <!-- (## OVERFLOW-X ##)
+        Adjust the overflow-y property to affect the overflow of content vertically.
+        * overflow-y-auto
+        * overflow-y-hidden
+        * overflow-y-visible
+        * overflow-y-scroll
+    -->
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
